--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -11,3 +11,10 @@ features = ["v3_16"]
 [dependencies.gio]
 version = ""
 features = ["v2_44"]
+
+
+[dependencies]
+serde_json = "1.0"
+libloading = "0.6.4"
+libc = "0.2.79"
+J2534Common = { path = "../MacchinaM2-J2534-Rust/J2534Common/"}
