--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -18,3 +18,6 @@ serde_json = "1.0"
 libloading = "0.6.4"
 libc = "0.2.79"
 J2534Common = { path = "../MacchinaM2-J2534-Rust/J2534Common/"}
+
+[target.'cfg(windows)'.dependencies]
+winreg = "0.7"
