make driver track master

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "MacchinaM2-J2534-Rust"]
 	path = MacchinaM2-J2534-Rust
+	branch = main
 	url = https://github.com/rnd-ash/MacchinaM2-J2534-Rust
