--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -6,7 +6,21 @@ edition = "2018"
 
 [lib]
 crate-type=["cdylib"]
+name="ovd"
 
 [dependencies]
-nodejs-sys = "0.2.0"
-common = {path = "../common" }
+napi = {git="https://github.com/napi-rs/napi-rs", features=["serde-json"]}
+napi-derive = {git="https://github.com/napi-rs/napi-rs"}
+serde_json = "1.0"
+libloading = "0.6.4"
+libc = "0.2.79"
+serde_derive = "1.0.80"
+lazy_static="1.4.0"
+serde = {version = "1.0.80", features = ["derive"]}
+J2534Common = { path = "../MacchinaM2-J2534-Rust/J2534Common/"}
+
+[target.'cfg(windows)'.dependencies]
+winreg = "0.7"
+
+[build-dependencies]
+napi-build="0.2.1"
