--- a/.github/workflows/app-windows-i686-msvc.yml
+++ b/.github/workflows/app-windows-i686-msvc.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v2
       
     - name: Init Macchina module
-      run: git submodule init
+      run: git submodule update --init --recursive
       
     - name: Setup node
       uses: actions/setup-node@v1
@@ -40,9 +40,6 @@ jobs:
 
     - name: Install i686 toolchain
       run: rustup target add i686-pc-windows-msvc
-      
-    - name: changedir
-      run: cd app/
     
     - name: NPM install
       run: |
