--- a/.github/workflows/app-windows-i686-msvc.yml
+++ b/.github/workflows/app-windows-i686-msvc.yml
@@ -55,6 +55,7 @@ jobs:
         # (No need to define this secret in the repo settings)
         github_token: ${{ secrets.github_token }}
         build_script_name: "build-win"
+        package_root: "app"  
         # If the commit is tagged with a version (e.g. "v1.0.0"),
         # release the app after building
         release: ${{ startsWith(github.ref, 'refs/tags/v') }}
