--- a/app/package.json
+++ b/app/package.json
@@ -58,5 +58,11 @@
     "rules": {
       "import/no-unresolved": "off"
     }
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rnd-ash/OpenVehicleDiag.git",
+    "directory": "app"
+
   }
 }
