--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,7 @@
   "name": "ovd",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "./index.js",
   "os": [
     "darwin",
     "linux",
