--- a/app/package.json
+++ b/app/package.json
@@ -13,9 +13,8 @@
   "license": "ISC",
   "scripts": {
     "start": "electron .",
-    "build": "cargo build --release && napi build",
-    "build-win": "cargo build --target i686-pc-windows-msvc && node -e \"require('fs').copyFileSync('target/i686-pc-windows-msvc/debug/ovd.dll', 'index.node')\"",
-    "build-release": "cargo build --release && napi build --release"
+    "build": "cargo build --release && napi build --release",
+    "build-win": "cargo build --target i686-pc-windows-msvc --release && node -e \"require('fs').copyFileSync('target/i686-pc-windows-msvc/release/ovd.dll', 'index.node')\""
   },
   "engines": {
     "node": ">= 14.0.0",
