--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -22,5 +22,8 @@ J2534Common = { path = "../MacchinaM2-J2534-Rust/J2534Common/"}
 [target.'cfg(windows)'.dependencies]
 winreg = "0.7"
 
+[target.'cfg(unix)'.dependencies]
+shellexpand = "2.0.0"
+
 [build-dependencies]
 napi-build={git="https://github.com/napi-rs/napi-rs"}
