--- a/CBFParser/Cargo.toml
+++ b/CBFParser/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde_json = "1.0"
 xml-rs = "0.8.3"
 binary-reader="0.3.0"
 encoding_rs = "0.8.24"
 common = { path = "../common" }
+serde = {version = "1.0.80", features = ["derive"]}
