--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -10,3 +10,4 @@ edition = "2018"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 byteorder="1.3.4"
+J2534Common = { path = "../MacchinaM2-J2534-Rust/J2534Common/"}
