--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ovd",
   "version": "0.0.1",
-  "description": "",
-  "main": "./main.js",
+  "description": "Open vehicle and ECU diagnostics platform",
+  "main": "./app/index.js",
   "os": [
     "darwin",
     "linux",
@@ -12,9 +12,16 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "electron .",
+    "start": "electron ./app",
     "build": "cargo build --release && napi build --release",
-    "build-win": "cargo build --target i686-pc-windows-msvc && node -e \"require('fs').copyFileSync('target/i686-pc-windows-msvc/debug/ovd.dll', 'index.node')\""
+    "build-win": "cargo build --target i686-pc-windows-msvc && node -e \"require('fs').copyFileSync('target/i686-pc-windows-msvc/debug/ovd.dll', 'index.node')\"",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder",
+    "dist:linux": "electron-builder --linux",
+    "dist:linux:targz": "electron-builder --x64 -l tar.gz ",
+    "dist:linux:deb": "electron-builder --x64 -l deb",
+    "dist:linux:rpm": "electron-builder --x64 -l rpm",
+    "release": "electron-builder"
   },
   "engines": {
     "node": ">= 14.0.0",
@@ -22,33 +29,33 @@
   },
   "build": {
     "appId": "com.rndash.ovd",
-    "mac": {
-      "category": "Diagnostics",
-      "publish": [
-        "github"
-      ]
-    },
-    "win": {
-      "target": "NSIS",
-      "publish": [
-        "github"
-      ]
-    },
     "linux": {
-      "publish": [
-        "github"
-      ],
+      "category": "Development",
+      "packageCategory": "net",
+      "executableName": "ovd",
+      "synopsis": "Open vehicle diagnostics",
+      "description": "Open vehicle and ECU diagnostics platform",
+      "desktop": {
+        "Name": "Open vehicle diagnostics",
+        "Comment": "Open ECU diagnostics tool",
+        "StartupWMClass": "ovd"
+      },
       "target": [
-        "AppImage",
-        "pacman",
+        "rpm",
         "deb",
-        "rpm"
-      ]
+        "tar.gz",
+        "AppImage"
+      ],
+      "publish": {
+        "provider": "github",
+        "releaseType": "draft"
+      }
     }
   },
   "dependencies": {
     "@node-rs/helper": "latest",
     "bootstrap": "^4.1.3",
+    "bootstrap-darkmode": "^0.7.0",
     "bootstrap-material-design": "^4.1.3",
     "eslint": "^6.8.0",
     "jquery": "^3.3.1",
