--- a/app_rust/Cargo.toml
+++ b/app_rust/Cargo.toml
@@ -1,17 +1,14 @@
 [package]
-name = "ovd"
+name = "openvehiclediag"
 version = "0.1.0"
-authors = ["Ashcon Mohseninia <ashcon50@gmail.com>"]
+authors = ["ashcon"]
 edition = "2018"
 
-[lib]
-crate-type=["cdylib"]
-name="ovd"
-path="src/rust/lib.rs"
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-napi = {git="https://github.com/napi-rs/napi-rs", features=["serde-json"]}
-napi-derive = {git="https://github.com/napi-rs/napi-rs"}
+iced="0.2.0"
+
 serde_json = "1.0"
 libloading = "0.6.4"
 libc = "0.2.79"
@@ -25,6 +22,3 @@ winreg = "0.7"
 
 [target.'cfg(unix)'.dependencies]
 shellexpand = "2.0.0"
-
-[build-dependencies]
-napi-build={git="https://github.com/napi-rs/napi-rs"}
