--- a/app_rust/Cargo.toml
+++ b/app_rust/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-iced="0.2.0"
+iced = { version = "0.2.0", features = ["tokio"] }
 
 serde_json = "1.0"
 libloading = "0.6.4"
