--- a/app_rust/Cargo.toml
+++ b/app_rust/Cargo.toml
@@ -17,6 +17,9 @@ lazy_static="1.4.0"
 serde = {version = "1.0.80", features = ["derive"]}
 J2534Common = { path = "../MacchinaM2-J2534-Rust/J2534Common/"}
 bitfield = "0.13.2"
+nfd = "0.0.4"
+hex-serde = "0.1.0"
+chrono = "0.4.19"
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.7"
