--- a/.github/workflows/app-windows-i686-msvc.yml
+++ b/.github/workflows/app-windows-i686-msvc.yml
@@ -14,7 +14,7 @@ defaults:
 
 jobs:
   build:
-    name: stable - windows-latest - i686 - node@14
+    name: stable - windows-latest - i686
     runs-on: windows-latest
 
     steps:
@@ -30,4 +30,4 @@ jobs:
       uses: actions-rs/cargo@v1
       with:
         command: build
-        args: --release
+        args: --release --target i686-pc-windows-msvc
