Load OvdECU implemented

--- a/app_rust/Cargo.toml
+++ b/app_rust/Cargo.toml
@@ -15,6 +15,7 @@ libc = "0.2.79"
 serde_derive = "1.0.80"
 lazy_static="1.4.0"
 serde = {version = "1.0.80", features = ["derive"]}
+common = { path = "../common" }
 J2534Common = { path = "../MacchinaM2-J2534-Rust/J2534Common/"}
 bitfield = "0.13.2"
 nfd = "0.0.4"
