--- a/app_rust/Cargo.toml
+++ b/app_rust/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-iced = { version = "0.2.0", features = ["tokio", "image"] }
+#iced = { version = "0.2.0", features = ["tokio", "image"] }
+iced = {git = "https://github.com/hecrj/iced", features = ["tokio", "image"]} # Drink from the fire hose
 
 serde_json = "1.0"
 libloading = "0.6.4"
