--- a/app_rust/Cargo.toml
+++ b/app_rust/Cargo.toml
@@ -2,6 +2,7 @@
 name = "openvehiclediag"
 version = "0.5.0"
 description = "pen Vehicle Diagnostics (OVD) is a Rust-based open source vehicle ECU diagnostic platform."
+edition = "2018"
 [package.metadata.bundle]
 version = "0.5.0"
 authors = ["ashcon"]
