Allow socketCAN Loading

--- a/app_rust/Cargo.toml
+++ b/app_rust/Cargo.toml
@@ -37,3 +37,7 @@ winreg = "0.7"
 
 [target.'cfg(unix)'.dependencies]
 shellexpand = "2.0.0"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+socketcan = "1.7.0"
+socketcan-isotp = "0.1.1"
