--- a/SMRParser/Cargo.toml
+++ b/SMRParser/Cargo.toml
@@ -6,8 +6,14 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name="SMRParser"
+src="src/main.rs"
+
 [dependencies]
+common ={ path = "../common/" }
 byteorder="1.3.4"
 nettle="7.0.0"
 binary-reader="0.3.0"
 flate2="1.0.6"
+zip="0.5.11"
