--- a/app_rust/Cargo.toml
+++ b/app_rust/Cargo.toml
@@ -34,6 +34,8 @@ hex-serde = "0.1.0"
 chrono = "0.4.19"
 hex = "0.4.2"
 image = "0.23.12"
+dialog = "0.3.0"
+backtrace = "0.3.59"
 
 [target.'cfg(windows)'.dependencies]
 winreg = "0.8"
