--- a/app_rust/Cargo.toml
+++ b/app_rust/Cargo.toml
@@ -24,10 +24,10 @@ bitfield = "0.13.2"
 nfd = "0.0.4"
 hex-serde = "0.1.0"
 chrono = "0.4.19"
-hex = "0.4.2"
 image = "0.23.12"
 dialog = "0.3.0"
 backtrace = "0.3.59"
-ecu_diagnostics="0.8.0"
-eframe = "0.15.0"
+#ecu_diagnostics="0.8.2"
+ecu_diagnostics = {git="https://github.com/rnd-ash/ecu_diagnostics"}
+eframe = { version = "*", default-features = false, features = ["default_fonts", "egui_glow"] }
 egui="0.15.0"
